fix(_style.scss): fixed spacing between widgets and links and responsive design

--- a/src/design/_styles.scss
+++ b/src/design/_styles.scss
@@ -19,10 +19,12 @@ $yellow: #d79921;
 
 * {
   margin: 0;
-  // font-family: "Courier New", Courier, monospace;
-  // font-family: "ZCOOL QingKe HuangYou", cursive;
   font-family: "Rajdhani", sans-serif;
   font-size: 1.2rem;
+}
+
+body {
+  background-color: $background;
 }
 
 .parent.flex {
@@ -30,7 +32,6 @@ $yellow: #d79921;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: $background;
   height: 100vh;
 }
 
@@ -38,7 +39,7 @@ $yellow: #d79921;
   min-width: 200px;
   min-height: 200px;
   background-color: $brightCyan;
-  margin: 10px;
+  margin: 40px 10px 20px 10px;
   padding: 5px;
   box-shadow: 5px 5px $cyan;
 
@@ -59,5 +60,10 @@ $yellow: #d79921;
   ul {
     list-style-type: square;
     padding-left: 30px;
+  }
+
+  li {
+    padding-top: 2px;
+    padding-bottom: 2px;
   }
 }
